@@ -30,9 +30,15 @@
  *                                                                         *
  ***************************************************************************/
 
+// NOTE - The use of the <= operator in for loops in this file
+//        is not a fencepost bug. Changing it to < results in
+//        the impossibility of doing anything useful with single-row
+//        or single-column selections.
+
 #include "editor.h"
 
-void Editor::normalize_selection() {
+void Editor::normalize_selection()
+{
 
 	int tmpval;
 
@@ -59,7 +65,8 @@ void Editor::normalize_selection() {
 
 
 
-void Editor::mark_block_begining() {
+void Editor::mark_block_begining()
+{
 
 
 	selection_begin_x=cursor_x;
@@ -76,15 +83,14 @@ void Editor::mark_block_begining() {
 
 }
 
-void Editor::selection_begin_at_cursor() {
-
+void Editor::selection_begin_at_cursor()
+{
 	mouse_selection_begin_x=cursor_x;
 	mouse_selection_begin_y=cursor_y;
-
-
 }
 
-void Editor::selection_end_at_cursor() {
+void Editor::selection_end_at_cursor()
+{
 
 	selection_begin_x=mouse_selection_begin_x;
 	selection_begin_y=mouse_selection_begin_y;
@@ -96,9 +102,8 @@ void Editor::selection_end_at_cursor() {
 
 }
 
-void Editor::mark_block_end() {
-
-
+void Editor::mark_block_end()
+{
 	selection_end_x=cursor_x;
 	selection_end_y=cursor_y;
 
@@ -113,15 +118,13 @@ void Editor::mark_block_end() {
 
 }
 
-void Editor::selection_release() {
-
+void Editor::selection_release()
+{
 	selection_active=false;
-
 }
 
-void Editor::mark_column_all() {
-
-
+void Editor::mark_column_all()
+{
 	if ( selection_active
 	    && (selection_begin_x==selection_end_x)
 	    && (selection_begin_x==cursor_x)	
@@ -147,18 +150,17 @@ void Editor::mark_column_all() {
 
 	
 
-void Editor::shift_selection_begin() {
-	
+void Editor::shift_selection_begin()
+{
 	shift_selection_in_progress=true;
 	shift_selection_begin_x=cursor_x;
 	shift_selection_begin_y=cursor_y;
 }
 
 
-void Editor::shift_selection_update() {
-
+void Editor::shift_selection_update()
+{
 	if (shift_selection_in_progress) {
-
 	        selection_active=true;
 		selection_begin_x=shift_selection_begin_x;
 		selection_begin_y=shift_selection_begin_y;	
@@ -169,15 +171,15 @@ void Editor::shift_selection_update() {
 	}
 }
 
-void Editor::shift_selection_end() {
-
+void Editor::shift_selection_end()
+{
 	shift_selection_in_progress=false;		
-
 }
 
 
-void Editor::selection_raise() {
 
+void Editor::selection_raise()
+{
 	int i,j;
 
 	if ( selection_active ) {
@@ -185,9 +187,9 @@ void Editor::selection_raise() {
 
 		push_current_pattern_to_undo_list("Raise notes on selection");
 
-		for (i=selection_begin_y;i<selection_end_y;i++)
+		for (i=selection_begin_y;i<=selection_end_y;i++)
 
-			for (j=selection_begin_x;j<selection_end_x;j++) {
+			for (j=selection_begin_x;j<=selection_end_x;j++) {
 
 				song->get_pattern(current_pattern)->get_note_ref(j,i).raise();
 
@@ -197,17 +199,16 @@ void Editor::selection_raise() {
 
 }
 
-void Editor::selection_lower() {
-
+void Editor::selection_lower()
+{
 	int i,j;
 
 	if ( selection_active ) {
 
 		push_current_pattern_to_undo_list("Lower notes on selection");
 
-		for (i=selection_begin_y;i<selection_end_y;i++)
-
-			for (j=selection_begin_x;j<selection_end_x;j++) {
+		for (i=selection_begin_y;i<=selection_end_y;i++)
+			for (j=selection_begin_x;j<=selection_end_x;j++) {
 
 				song->get_pattern(current_pattern)->get_note_ref(j,i).lower();
 
@@ -217,7 +218,8 @@ void Editor::selection_lower() {
 
 }
 
-void Editor::selection_zap() {
+void Editor::selection_zap()
+{
 
 	int i,j;
 
@@ -225,10 +227,8 @@ void Editor::selection_zap() {
 
 	selection_copy();
 	
-	for (i=selection_begin_y;i<selection_end_y;i++)
-
-		for (j=selection_begin_x;j<selection_end_x;j++) {
-
+	for (i=selection_begin_y;i<=selection_end_y;i++)
+		for (j=selection_begin_x;j<=selection_end_x;j++) {
 			song->get_pattern(current_pattern)->get_note_ref(j,i).clear();
 
 		}
@@ -236,7 +236,8 @@ void Editor::selection_zap() {
 }
 
 	
-void Editor::selection_parameter_ramp() {
+void Editor::selection_parameter_ramp()
+{
 
 	int i,j;
 	int value_begin,value_end;
@@ -247,12 +248,12 @@ void Editor::selection_parameter_ramp() {
         if (selection_active && selection_begin_y<selection_end_y) {
 
 
-		for (j=selection_begin_x;j<selection_end_x;j++) {
+		for (j=selection_begin_x;j<=selection_end_x;j++) {
 		
 				value_begin=song->get_pattern(current_pattern)->get_note(j,selection_begin_y).parameter;
 				value_end=song->get_pattern(current_pattern)->get_note(j,selection_end_y).parameter;
 	
-			for (i=selection_begin_y;i<selection_end_y;i++) {
+			for (i=selection_begin_y;i<=selection_end_y;i++) {
 	
 	                        song->get_pattern(current_pattern)->get_note_ref(j,i).parameter=value_begin+(value_end-value_begin)*(i-selection_begin_y)/(selection_end_y-selection_begin_y);
 				
@@ -264,7 +265,8 @@ void Editor::selection_parameter_ramp() {
 
 }
 	
-void Editor::selection_volume_ramp() {
+void Editor::selection_volume_ramp()
+{
 
 	int i,j;
 	int value_begin,value_end;
@@ -273,14 +275,14 @@ void Editor::selection_volume_ramp() {
 
         if (selection_active && selection_begin_y<selection_end_y ) {
 	
-		for (j=selection_begin_x;j<selection_end_x;j++) {
+		for (j=selection_begin_x;j<=selection_end_x;j++) {
 		
 				value_begin=song->get_pattern(current_pattern)->get_note(j,selection_begin_y).volume;
 				value_end=song->get_pattern(current_pattern)->get_note(j,selection_end_y).volume;
 	
 			if (value_begin<65 && value_end<65) {
 
-				for (i=selection_begin_y;i<selection_end_y;i++) {
+				for (i=selection_begin_y;i<=selection_end_y;i++) {
 		
 		                        song->get_pattern(current_pattern)->get_note_ref(j,i).volume=value_begin+(value_end-value_begin)*(i-selection_begin_y)/(selection_end_y-selection_begin_y);
 					
@@ -295,16 +297,17 @@ void Editor::selection_volume_ramp() {
 
 //ClipBoard
 
-void Editor::selection_copy() {
+void Editor::selection_copy()
+{
 
 	int i,j;
 
 	clipboard_width=((selection_end_x-selection_begin_x)+1);
 	clipboard.set_length((selection_end_y-selection_begin_y)+1);
 
-	for (i=selection_begin_x;i<selection_end_x;i++)
+	for (i=selection_begin_x;i<=selection_end_x;i++)
 
-		for (j=selection_begin_y;j<selection_end_y;j++) {
+		for (j=selection_begin_y;j<=selection_end_y;j++) {
 
 
 			clipboard.get_note_ref(i-selection_begin_x,j-selection_begin_y)=song->get_pattern(current_pattern)->get_note(i,j);
@@ -314,7 +317,8 @@ void Editor::selection_copy() {
 }
 
 
-void Editor::selection_paste_overwrite() {
+void Editor::selection_paste_overwrite()
+{
 
 	int i,j;
 	int limit_x,limit_y;
@@ -328,16 +332,17 @@ void Editor::selection_paste_overwrite() {
 	limit_y=cursor_y+(clipboard.get_length()-1);
 	if (limit_y>(song->get_pattern(current_pattern)->get_length()-1)) limit_y=(song->get_pattern(current_pattern)->get_length()-1);
 	
-	for (i=cursor_x;i<limit_x;i++)
+	for (i=cursor_x;i<=limit_x;i++)
 
-		for (j=cursor_y;j<limit_y;j++) {
+		for (j=cursor_y;j<=limit_y;j++) {
 
 			song->get_pattern(current_pattern)->get_note_ref(i,j)=clipboard.get_note(i-cursor_x,j-cursor_y);
 
 	}
 }
 
-void Editor::selection_paste_mix() {
+void Editor::selection_paste_mix()
+{
 
 	int i,j;
 	int limit_x,limit_y;
@@ -352,9 +357,9 @@ void Editor::selection_paste_mix() {
 	limit_y=cursor_y+(clipboard.get_length()-1);
 	if (limit_y>(song->get_pattern(current_pattern)->get_length()-1)) limit_y=(song->get_pattern(current_pattern)->get_length()-1);
 	
-	for (i=cursor_x;i<limit_x;i++)
+	for (i=cursor_x;i<=limit_x;i++)
 	
-		for (j=cursor_y;j<limit_y;j++) {
+		for (j=cursor_y;j<=limit_y;j++) {
 
 			if (song->get_pattern(current_pattern)->get_note(i,j)==empty_note) {
 
@@ -365,7 +370,8 @@ void Editor::selection_paste_mix() {
 }
 
 
-void Editor::selection_paste_insert() {
+void Editor::selection_paste_insert()
+{
 
 	int i,j;
 	int limit_x,limit_y;
@@ -378,7 +384,7 @@ void Editor::selection_paste_insert() {
 	limit_y=cursor_y+(clipboard.get_length()-1);
 	if (limit_y>(song->get_pattern(current_pattern)->get_length()-1)) limit_y=(song->get_pattern(current_pattern)->get_length()-1);
 
-	for (i=cursor_x;i<limit_x;i++) {
+	for (i=cursor_x;i<=limit_x;i++) {
 
 
 		for(j=(song->get_pattern(current_pattern)->get_length()-1);j>(limit_y);j--) {
@@ -386,7 +392,7 @@ void Editor::selection_paste_insert() {
 			song->get_pattern(current_pattern)->get_note_ref(i,j)=song->get_pattern(current_pattern)->get_note(i,j-clipboard.get_length());
 		}
 
-		for (j=cursor_y;j<limit_y;j++) {
+		for (j=cursor_y;j<=limit_y;j++) {
 
 			song->get_pattern(current_pattern)->get_note_ref(i,j)=clipboard.get_note(i-cursor_x,j-cursor_y);
 
@@ -395,7 +401,8 @@ void Editor::selection_paste_insert() {
 	}
 }
 
-void Editor::selection_volume_scale(int p_percent) {
+void Editor::selection_volume_scale(int p_percent)
+{
 
 	int i,j;
 	int value;
@@ -407,9 +414,9 @@ void Editor::selection_volume_scale(int p_percent) {
 
         if (selection_active && selection_begin_y<selection_end_y ) {
 
-		for (j=selection_begin_x;j<selection_end_x;j++) {
+		for (j=selection_begin_x;j<=selection_end_x;j++) {
 
-				for (i=selection_begin_y;i<selection_end_y;i++) {
+				for (i=selection_begin_y;i<=selection_end_y;i++) {
 
 					tmp_note=song->get_pattern(current_pattern)->get_note(j,i);
 
@@ -436,7 +443,8 @@ void Editor::selection_volume_scale(int p_percent) {
 		}
 	}
 }
-void Editor::selection_set_instrument_mask() {
+void Editor::selection_set_instrument_mask()
+{
 
 	int i,j;
 	Note tmp_note;
@@ -446,15 +454,11 @@ void Editor::selection_set_instrument_mask() {
 	push_current_pattern_to_undo_list("Selection set instrument mask");
 
         if (selection_active && selection_begin_y<selection_end_y ) {
-	
-		for (j=selection_begin_x;j<selection_end_x;j++) {
-
-			for (i=selection_begin_y;i<selection_end_y;i++) {
-		
+		for (j=selection_begin_x;j<=selection_end_x;j++) {
+			for (i=selection_begin_y;i<=selection_end_y;i++) {
 				tmp_note=song->get_pattern(current_pattern)->get_note(j,i);
 
 				if (tmp_note.instrument!=EMPTY_FIELD) {
-
 					song->get_pattern(current_pattern)->get_note_ref(j,i).instrument=last_instrument;
 				}
 			}
@@ -462,7 +466,8 @@ void Editor::selection_set_instrument_mask() {
 		}
 	}
 }
-void Editor::selection_set_volume_mask() {
+void Editor::selection_set_volume_mask()
+{
 
 	int i,j;
 
@@ -472,9 +477,9 @@ void Editor::selection_set_volume_mask() {
 
         if (selection_active && selection_begin_y<selection_end_y ) {
 
-		for (j=selection_begin_x;j<selection_end_x;j++) {
+		for (j=selection_begin_x;j<=selection_end_x;j++) {
 
-			for (i=selection_begin_y;i<selection_end_y;i++) {
+			for (i=selection_begin_y;i<=selection_end_y;i++) {
 
 				song->get_pattern(current_pattern)->get_note_ref(j,i).volume=last_volume;
 			}
@@ -483,7 +488,8 @@ void Editor::selection_set_volume_mask() {
 	}
 }
 
-void Editor::selection_expand() {
+void Editor::selection_expand()
+{
 
 	int i,j;
 	push_current_pattern_to_undo_list("Selection Expand x 2");
@@ -496,7 +502,7 @@ void Editor::selection_expand() {
 		if (expand_max>=song->get_pattern(current_pattern)->get_length())
 			expand_max=song->get_pattern(current_pattern)->get_length()-1;
 
-		for (j=selection_begin_x;j<selection_end_x;j++) {
+		for (j=selection_begin_x;j<=selection_end_x;j++) {
 
 			for (i=expand_max;i>=selection_begin_y;i--) {
 
@@ -514,16 +520,17 @@ void Editor::selection_expand() {
 	}
 }
 
-void Editor::selection_shrink() {
+void Editor::selection_shrink()
+{
 
 	int i,j;
 	push_current_pattern_to_undo_list("Selection Shrink x 2");
 
         if (selection_active && selection_begin_y<selection_end_y ) {
 
-		for (j=selection_begin_x;j<selection_end_x;j++) {
+		for (j=selection_begin_x;j<=selection_end_x;j++) {
 
-			for (i=selection_begin_y;i<selection_end_y;i++) {
+			for (i=selection_begin_y;i<=selection_end_y;i++) {
 
 				int src_note=i-selection_begin_y;
 				if (src_note>=((selection_end_y-selection_begin_y)/2)) {
@@ -539,7 +546,8 @@ void Editor::selection_shrink() {
 	}
 }
 
-void Editor::selection_wipe_stray_volumes() {
+void Editor::selection_wipe_stray_volumes()
+{
 
 	int i,j;
 	Note tmp_note;
@@ -550,9 +558,9 @@ void Editor::selection_wipe_stray_volumes() {
 
         if (selection_active && selection_begin_y<selection_end_y ) {
 
-		for (j=selection_begin_x;j<selection_end_x;j++) {
+		for (j=selection_begin_x;j<=selection_end_x;j++) {
 
-				for (i=selection_begin_y;i<selection_end_y;i++) {
+				for (i=selection_begin_y;i<=selection_end_y;i++) {
 
 					tmp_note=song->get_pattern(current_pattern)->get_note(j,i);
 					if ((tmp_note.instrument==EMPTY_FIELD) && ( (tmp_note.note==EMPTY_FIELD) || (tmp_note.note==Note::CUT) || (tmp_note.note==Note::OFF)) ) {
