@@ -1,3 +1,8 @@
+Sun Aug 5 05:37:54 EDT 2007 J Phelps <godless@users.sf.net>
+	* editor_selection.cpp: Changed the '<' operators in
+	for-loops in this file back to <=, which they were
+	previously, to correct a bug with selections in the
+	Pattern Editor.
 Sat Aug 4 21:01:54 EDT 2007 J Phelps <godless@users.sf.net>
 	* player_rt_keyboard.cpp
 	(find_empty_channel,find_note_in_channel,instrument_stop_all):
